--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.0",
+    "@next/mdx": "^9.3.5",
     "date-fns": "^2.12.0",
     "gray-matter": "^4.0.2",
     "next": "9.3.5",
