--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@next/mdx": "^9.3.5",
     "date-fns": "^2.12.0",
     "gray-matter": "^4.0.2",
+    "isomorphic-fetch": "^2.2.1",
     "next": "9.3.5",
+    "now": "^18.0.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
