--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.12.0",
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
     "now": "^18.0.0",
     "prettier": "^2.0.5",
