--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.7.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@mdx-js/loader": "^1.6.0",
     "@next/mdx": "^9.3.6",
     "date-fns": "^2.12.0",
+    "emotion-theming": "^10.0.27",
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
