--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
     "remark-html": "^11.0.1",
+    "styled-components": "^5.1.0",
     "swr": "^0.2.0"
   }
 }
