--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@mdx-js/loader": "^1.6.0",
+    "@mdx-js/tag": "^0.20.3",
     "@next/mdx": "^9.3.6",
+    "axe-cli": "^3.2.0",
     "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.3.5",
+    "next-images": "^1.4.0",
     "now": "^18.0.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
