--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.3.5",
+    "next": "^9.4.2",
     "next-images": "^1.4.0",
     "now": "^18.0.0",
     "prettier": "^2.0.5",
